# content-engine

./: .gitignore  ARCHITECTURE.md  README.md  config.example.json  pyproject.toml
assets/: README.md
content_engine/: __init__.py  cli.py  config.py  pipeline.py
content_engine/llm/: __init__.py  base.py  providers.py  router.py
content_engine/planner/: __init__.py  scene_planner.py  schema.py
content_engine/qc/: __init__.py  guidelines.md  qc.py
content_engine/render/: __init__.py  remotion_bridge.py
content_engine/sourcing/: __init__.py  asset_manager.py  images.py  local_assets.py  videos.py
content_engine/util/: media.py  text.py
electron/: README.md  main.js  package-lock.json  package.json  preload.js
electron/renderer/: app.js  index.html  styles.css
examples/: sample_script.txt
remotion/: package-lock.json  package.json  remotion.config.ts
remotion/src/: Root.tsx  Video.tsx  defaultProps.ts  types.ts
remotion/src/components/: Counter.tsx  LowerThird.tsx  Reveal.tsx  SceneView.tsx  TitleCard.tsx  Visual.tsx
tests/: test_config_llm.py  test_planner.py  test_qc.py  test_render_bridge.py  test_render_e2e.py  test_sourcing.py
